--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Monos
-email: ejjoo7994@gmail.com
+email: restrain22@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
   Themed by ejjoo
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://restrain22.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: ejjoo
+github_username: restrain22
 highlighter: rouge
 svg:
   optimize: true
