--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Monos
+title: jh's programming diary
 email: restrain22@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Themed by ejjoo
+  Themed by jhHan
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://restrain22.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: restrain22
